--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <title>Cenarium</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:wght@100;300&display=swap" rel="stylesheet">
@@ -54,9 +55,9 @@
             </div>
 
             <div class="bolas">
-                <div><img class="bola1"src="imagens/bola1.webp" alt=""></div>
-                <div><img class="bola2" src="imagens/bola3.webp" alt=""></div>
-                <div><img class="bola3"src="imagens/bola2.webp" alt=""></div>
+                <div><img class="bola1"src="imagens/bola1.webp" alt="#"></div>
+                <div><img class="bola2" src="imagens/bola3.webp" alt="#"></div>
+                <div><img class="bola3"src="imagens/bola2.webp" alt="#"></div>
             </div>
         </section>
         
